Add vite build command

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "project-starter",
+  "name": "odin-form",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:semyonsurkov/odin-calculator.git",
+  "main": "script.js",
+  "repository": "git@github.com:semyonsurkov/odin-form.git",
   "author": "Semyon Surkov <semyonsurkov@outlook.com>",
   "license": "MIT",
   "dependencies": {
     "vite": "^4.3.5"
   },
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   }
 }
